# pygame-cli

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/: __init__.py  __main__.py  cli.py  test.py
src/manager/: __init__.py  build.py  clone.py  delete.py  explore.py  format.py  info.py  list.py  new.py  path.py  rename.py  run.py
src/template/: game.py  main.py  requirements.txt
