[project]
name = "pygame_cli"
version = "1.0.1"
authors = [{ name = "AntonisPylos", email = "antonis@pylos.dev" }]
description = "A CLI project management library for pygame community edition."
keywords = ["pygame", "cli", "project "]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "appdirs==1.4.4",
    "cx_Freeze == 8.5.3",
    "GitPython == 3.1.46"
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: pygame",
]
[project.urls]
Repository = "https://github.com/AntonisPylos/pygame-cli"
Issues = "https://github.com/AntonisPylos/pygame-cli/issues"
Releases = "https://github.com/AntonisPylos/pygame-cli/releases"

[project.scripts]
pygame = "pygame_cli.__main__:main"
pygame-ce = "pygame_cli.__main__:main"
pgce = "pygame_cli.__main__:main"

[tool.setuptools]
package-dir = { "pygame_cli" = "src" }
packages = [
    "pygame_cli",
    "pygame_cli.manager"
]

[tool.setuptools.package-data]
pygame_cli = ["template/**"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
